logs/offboard_pkg/build.make.033.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:97:55: error: ‘angle_d’ was not declared in this scope
   97 |         Eigen::Vector3d ned[nVehicle], lla[nVehicle]; angle_d[nVehicle], lla_lead0;
      |                                                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:97:74: error: ‘lla_lead0’ was not declared in this scope
   97 |         Eigen::Vector3d ned[nVehicle], lla[nVehicle]; angle_d[nVehicle], lla_lead0;
      |                                                                          ^~~~~~~~~
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
